objects/sumoapp__CacheSetting__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__EventBuilderCacheSettings__c</fullName>
        <label>Event Builder Cache Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EventCalendarCacheSettings__c</fullName>
        <label>Event Calendar Cache Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__InviteDetailCacheSettings__c</fullName>
        <label>Invite Detail Cache Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SUMOCacheSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SUMO Cache Setting</label>
    <nameField>
        <displayFormat>SCN-{00000}</displayFormat>
        <label>SUMO Cache Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Cache Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>